--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+   <!-- add the style sheet here -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Taskmaster Pro</title>
 </head>
@@ -28,8 +30,7 @@
         <!-- todo start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
-            </h4>
+            <h4 class="card-header bg-dark text-light"></h4>
             <ul id="list-toDo" class="list-group list-group-flush">
               <li class="list-group-item">
                 <span class="badge badge-primary badge-pill"></span>
@@ -42,8 +43,7 @@
         <!-- in progress start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
-            </h4>
+            <h4 class="card-header bg-dark text-light"></h4>
             <ul id="list-inProgress" class="list-group list-group-flush">
               <li class="list-group-item">
                 <span class="badge badge-primary badge-pill"></span>
@@ -56,8 +56,7 @@
         <!-- in review start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
-            </h4>
+            <h4 class="card-header bg-dark text-light"></h4>
             <ul id="list-inReview" class="list-group list-group-flush">
               <li class="list-group-item">
                 <span class="badge badge-primary badge-pill"></span>
@@ -70,8 +69,7 @@
         <!-- done start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
-            </h4>
+            <h4 class="card-header bg-dark text-light"></h4>
             <ul id="list-done" class="list-group list-group-flush">
               <li class="list-group-item">
                 <span class="badge badge-primary badge-pill"></span>
@@ -122,6 +120,8 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/script.js"></script>
